force-app/main/default/objects/Interview__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>