force-app/main/default/objects/Interview__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <label>Interviewer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>