force-app/main/default/objects/Interview__c/fields/Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Position__c</fullName>
    <inlineHelpText>Scheduled an interview for this job position</inlineHelpText>
    <label>Job Position</label>
    <referenceTo>Job_Position__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>